--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "Rudhra Raveendran <rooday@bu.edu> (https://rooday.com)"
   ],
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-google-analytics": "^2.1.38",
@@ -21,9 +23,11 @@
     "gatsby-transformer-sharp": "^2.3.19",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-masonry-component": "^6.2.1"
+    "react-masonry-component": "^6.2.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
